--- a/gui/main.ui
+++ b/gui/main.ui
@@ -107,16 +107,16 @@
      <string/>
     </property>
    </widget>
-   <widget class="QLabel" name="label_won">
+   <widget class="QLabel" name="label_text">
     <property name="enabled">
      <bool>true</bool>
     </property>
     <property name="geometry">
      <rect>
-      <x>630</x>
-      <y>480</y>
-      <width>151</width>
-      <height>41</height>
+      <x>610</x>
+      <y>240</y>
+      <width>181</width>
+      <height>241</height>
      </rect>
     </property>
     <property name="palette">
@@ -126,67 +126,6 @@
         <brush brushstyle="SolidPattern">
          <color alpha="255">
           <red>0</red>
-          <green>170</green>
-          <blue>0</blue>
-         </color>
-        </brush>
-       </colorrole>
-      </active>
-      <inactive>
-       <colorrole role="WindowText">
-        <brush brushstyle="SolidPattern">
-         <color alpha="255">
-          <red>0</red>
-          <green>170</green>
-          <blue>0</blue>
-         </color>
-        </brush>
-       </colorrole>
-      </inactive>
-      <disabled>
-       <colorrole role="WindowText">
-        <brush brushstyle="SolidPattern">
-         <color alpha="255">
-          <red>120</red>
-          <green>120</green>
-          <blue>120</blue>
-         </color>
-        </brush>
-       </colorrole>
-      </disabled>
-     </palette>
-    </property>
-    <property name="font">
-     <font>
-      <family>MS Shell Dlg 2</family>
-      <pointsize>16</pointsize>
-      <weight>75</weight>
-      <bold>true</bold>
-     </font>
-    </property>
-    <property name="text">
-     <string>Game won</string>
-    </property>
-   </widget>
-   <widget class="QLabel" name="label_lost">
-    <property name="enabled">
-     <bool>true</bool>
-    </property>
-    <property name="geometry">
-     <rect>
-      <x>630</x>
-      <y>480</y>
-      <width>141</width>
-      <height>41</height>
-     </rect>
-    </property>
-    <property name="palette">
-     <palette>
-      <active>
-       <colorrole role="WindowText">
-        <brush brushstyle="SolidPattern">
-         <color alpha="255">
-          <red>255</red>
           <green>0</green>
           <blue>0</blue>
          </color>
@@ -197,7 +136,7 @@
        <colorrole role="WindowText">
         <brush brushstyle="SolidPattern">
          <color alpha="255">
-          <red>255</red>
+          <red>0</red>
           <green>0</green>
           <blue>0</blue>
          </color>
@@ -220,13 +159,13 @@
     <property name="font">
      <font>
       <family>MS Shell Dlg 2</family>
-      <pointsize>16</pointsize>
-      <weight>75</weight>
-      <bold>true</bold>
+      <pointsize>12</pointsize>
+      <weight>50</weight>
+      <bold>false</bold>
      </font>
     </property>
     <property name="text">
-     <string>Game lost</string>
+     <string></string>
     </property>
    </widget>
    <widget class="QLabel" name="label_image">
